# DirectML

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README.md  Releases.md  cgmanifest.json  community.html  component-governance.yml  gulpfile.js  index.html  index.js  links.html  package-lock.json  package.json  support-matrix.js
DxDispatch/: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ThirdPartyNotices.txt  cgmanifest.json  dml_element_wise_add_output.npy  dxdispatch_sum.wpix
DxDispatch/cmake/: cxxopts.cmake  d3d12.cmake  direct3d.cmake  directml.cmake  directmlx.cmake  dxc.cmake  dxcompiler.cmake  dxheaders.cmake  flatbuffer.cmake  fmt.cmake  gdk.cmake  gsl.cmake  gtest.cmake  half.cmake  helper_platform.cmake  helper_redist.cmake  onnxruntime.cmake  onnxruntime_extensions.cmake  pix.cmake  rapidjson.cmake  wil.cmake
DxDispatch/doc/: Backlog.md  Guide.md
DxDispatch/models/: _schema.json  add_fp16.hlsl  add_fp16.json  caffenet-12-int.json  conv_0.json  dmlSerializedGraph_matmul_add.json  dml_convolution.json  dml_convolution_2d.json  dml_convolution_3d.json  dml_cumulative_product.json  dml_element_wise_add.json  dml_element_wise_add1.json  dml_element_wise_add_input.npy  dml_element_wise_add_npy.json  dml_element_wise_clip.json  dml_element_wise_identity.json  dml_fill_value_sequence.json  dml_gemm.json  dml_gemm_graph.json  dml_graph_quadratic.json  dml_join.json  dml_mha.json  dml_owned_tensors.json  dml_reduce.json  dml_rnn.json  dml_scalar_union_fp16.json  dml_slice.json  dml_split.json  dml_upsample_2d.json  dml_upsample_3d.json  fb_bvlcalexnet-12-fp16.json  fb_bvlcalexnet_12_fp16.json  fb_caffenet_12_int8.json  fb_gemm.json  fb_mobilenetv2_7_int8_optimized.json  fb_squeezenet1.0_12_fp16.json  hlsl_add.hlsl  hlsl_add_fp16.json  hlsl_add_fp32.json  hlsl_add_fp32_npy.json  (+14 more)
DxDispatch/models/matmul_add/: matmul_add.onnx
DxDispatch/src/DirectMLHelpers/: ApiHelpers.h  DmlGraphDeserialization.cpp  SchemaHelpers.h  Utility.h
DxDispatch/src/dxdispatch/: AbstractOperatorDesc.h  Adapter.cpp  Adapter.h  ApiTraits.cpp  ApiTraits.h  CommandLineArgs.cpp  CommandLineArgs.h  D3d12Module.cpp  D3d12Module.h  DeferCleanup.h  Device.cpp  Device.h  Dispatchable.h  DmlDispatchable.cpp  DmlDispatchable.h  DmlGraphDeserialization.cpp  DmlGraphHelper.h  DmlGraphSerialization.cpp  DmlGraphSerialization.h  DmlSerializedGraphDesc.h  DmlSerializedGraphDispatchable.cpp  DmlSerializedGraphDispatchable.h  DmlTracing.cpp  DmlTracing.h  DxDispatchInterface.h  DxDispatchInterface.h.in  DxModules.cpp  DxModules.h  Executor.cpp  Executor.h  FbDispatchable.cpp  FbDispatchable.h  HlslDispatchable.cpp  HlslDispatchable.h  Logging.cpp  Logging.h  ModuleInfo.cpp  ModuleInfo.h  OnnxDispatchable.cpp  OnnxDispatchable.h  (+17 more)
DxDispatch/src/exe/: main.cpp
DxDispatch/src/model/: BucketAllocator.h  ImageReaderWriter.cpp  ImageReaderWriter.h  JsonParsers.cpp  JsonParsers.h  JsonParsersGenerated.cpp  Model.cpp  Model.h  NpyReaderWriter.cpp  NpyReaderWriter.h  OnnxParsers.cpp  OnnxParsers.h  StdSupport.h  pch.h
DxDispatch/src/test/: JsonParserTests.cpp
DxDispatch/tools/: .gitignore  AnalyzePixGpuCapture.ps1  GenerateParsingHelpers.ps1  RunTest.ps1  pipeline.yml
Python/: .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
Python/dependencies/microsoft.ai.directml.1.4.0/: .signature.p7s  LICENSE.txt  Microsoft.AI.DirectML.nuspec  README.md  ThirdPartyNotices.txt  [Content_Types].xml
Python/samples/: candy.py  mnist.py  mobilenet.py  squeezenet.py  superres.py  test.py
Python/samples/Test/: Test.sln
Python/samples/candy_tensor_data/: InstanceNormalization_B.npy  InstanceNormalization_B1.npy  InstanceNormalization_B10.npy  InstanceNormalization_B11.npy  InstanceNormalization_B12.npy  InstanceNormalization_B13.npy  InstanceNormalization_B14.npy  InstanceNormalization_B2.npy  InstanceNormalization_B3.npy  InstanceNormalization_B4.npy  InstanceNormalization_B5.npy  InstanceNormalization_B6.npy  InstanceNormalization_B7.npy  InstanceNormalization_B8.npy  InstanceNormalization_B9.npy  InstanceNormalization_scale.npy  InstanceNormalization_scale1.npy  InstanceNormalization_scale10.npy  InstanceNormalization_scale11.npy  InstanceNormalization_scale12.npy  InstanceNormalization_scale13.npy  InstanceNormalization_scale14.npy  InstanceNormalization_scale2.npy  InstanceNormalization_scale3.npy  InstanceNormalization_scale4.npy  InstanceNormalization_scale5.npy  InstanceNormalization_scale6.npy  InstanceNormalization_scale7.npy  InstanceNormalization_scale8.npy  InstanceNormalization_scale9.npy  convolution10_B.npy  convolution10_W.npy  convolution11_B.npy  convolution11_W.npy  convolution12_B.npy  convolution12_W.npy  convolution13_B.npy  convolution13_W.npy  convolution14_B.npy  convolution14_W.npy  (+22 more)
Python/samples/la_muse_tensor_data/: InstanceNormalization_B.npy  InstanceNormalization_B1.npy  InstanceNormalization_B10.npy  InstanceNormalization_B11.npy  InstanceNormalization_B12.npy  InstanceNormalization_B13.npy  InstanceNormalization_B14.npy  InstanceNormalization_B2.npy  InstanceNormalization_B3.npy  InstanceNormalization_B4.npy  InstanceNormalization_B5.npy  InstanceNormalization_B6.npy  InstanceNormalization_B7.npy  InstanceNormalization_B8.npy  InstanceNormalization_B9.npy  InstanceNormalization_scale.npy  InstanceNormalization_scale1.npy  InstanceNormalization_scale10.npy  InstanceNormalization_scale11.npy  InstanceNormalization_scale12.npy  InstanceNormalization_scale13.npy  InstanceNormalization_scale14.npy  InstanceNormalization_scale2.npy  InstanceNormalization_scale3.npy  InstanceNormalization_scale4.npy  InstanceNormalization_scale5.npy  Mul_B.npy  (+37 more)
Python/src/: d3dx12.h  device.cpp  device.h  model.h  module.cpp  precomp.h  typeconvert.h  util.cpp  util.h
Samples/DirectMLCV/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dx_helpers.h  half.hpp  image_helpers.h  main.cpp
Samples/DirectML_ESRGAN/: CMakeLists.txt  CMakePresets.json  README.md  ThirdPartyNotices.txt  dx_helpers.h  helpers.cpp  helpers.h  image_helpers.h  main.cpp  pch.h
(+1475 files in other folders)
